Login page added

--- a/login.html
+++ b/login.html
@@ -212,7 +212,7 @@
         <div class="logo">BlogHub</div>
         <p class="tagline">Welcome back! Sign in to your account</p>
 
-        <form id="loginForm">
+        <form id="form">
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" placeholder="Enter your email" required>
@@ -255,5 +255,6 @@
         </div>
     </div>
 </body>
+<script type="module" src="./scripts/login.js"></script>
 
 </html>
