--- a/register.html
+++ b/register.html
@@ -239,7 +239,7 @@
         </form>
 
         <div class="login-link">
-            Already have an account? <a href="#">Log in</a>
+            Already have an account? <a href="login.html">Log in</a>
         </div>
 
     </div>
