--- a/login.html
+++ b/login.html
@@ -6,205 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogHub | Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 450px;
-            width: 100%;
-            background: white;
-            border-radius: 16px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-            padding: 30px;
-        }
-
-        .logo {
-            color: #764ba2;
-            font-size: 1.8rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 8px;
-        }
-
-        .tagline {
-            color: #777;
-            text-align: center;
-            margin-bottom: 25px;
-            font-size: 0.95rem;
-        }
-
-        .form-group {
-            margin-bottom: 16px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 6px;
-            font-weight: 500;
-            color: #555;
-            font-size: 0.9rem;
-        }
-
-        input[type="email"],
-        input[type="password"] {
-            width: 100%;
-            padding: 12px 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 0.95rem;
-            transition: all 0.3s;
-        }
-
-        input[type="email"]:focus,
-        input[type="password"]:focus {
-            border-color: #764ba2;
-            box-shadow: 0 0 0 2px rgba(118, 75, 162, 0.2);
-            outline: none;
-        }
-
-        .login-btn {
-            width: 100%;
-            padding: 13px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s;
-            margin-top: 8px;
-        }
-
-        .login-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 12px rgba(118, 75, 162, 0.4);
-        }
-
-        .divider {
-            display: flex;
-            align-items: center;
-            margin: 20px 0;
-        }
-
-        .divider::before,
-        .divider::after {
-            content: "";
-            flex: 1;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .divider-text {
-            padding: 0 15px;
-            color: #777;
-            font-size: 0.9rem;
-        }
-
-        .google-btn {
-            width: 100%;
-            padding: 12px;
-            background: white;
-            color: #555;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 0.95rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .google-btn:hover {
-            background: #f8f9fa;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .google-btn i {
-            color: #DB4437;
-            font-size: 1.1rem;
-        }
-
-        .register-link {
-            text-align: center;
-            margin-top: 20px;
-            color: #777;
-            font-size: 0.9rem;
-        }
-
-        .register-link a {
-            color: #764ba2;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .register-link a:hover {
-            text-decoration: underline;
-        }
-
-        .features {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .feature {
-            text-align: center;
-            flex: 1;
-            padding: 10px 5px;
-            border-radius: 8px;
-        }
-
-        .feature i {
-            font-size: 1.2rem;
-            color: #764ba2;
-            margin-bottom: 6px;
-        }
-
-        .feature p {
-            font-size: 0.8rem;
-            color: #555;
-        }
-
-        @media (max-width: 500px) {
-            .container {
-                padding: 25px 20px;
-            }
-
-            .features {
-                flex-direction: column;
-                gap: 8px;
-            }
-
-            .feature {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 8px;
-                padding: 8px;
-            }
-
-            .feature p {
-                margin: 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/login.css">
 </head>
 
 <body>
