--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="logo">BlogHub</div>
         <div class="nav-user">
             <div class="user-info">
-                <span class="user-name">Alex Johnson</span>
-                <img src="" class="user-avatar">
+                <span class="user-name"></span>
+                <img src="https://www.gravatar.com/avatar/?d=mp&s=200" class="user-avatar">
             </div>
             <button class="login-btn" id="logout">Logout</button>
             <button class="login-btn" id="login">Login</button>
