--- a/profile.html
+++ b/profile.html
@@ -294,6 +294,8 @@
             </div>
         </div>
     </div>
+
+    <script type="module" src="./scripts/profile.js"></script>
 </body>
 
 </html>
