--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,6 @@
             height: 100%;
         }
 
-        /* full-screen background + center the card */
         body {
             min-height: 100vh;
             display: flex;
@@ -36,12 +35,10 @@
             justify-content: center;
             background: linear-gradient(135deg, var(--grad-start) 0%, var(--grad-end) 100%);
             -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
             overflow: hidden;
             padding: 20px;
         }
 
-        /* main card */
         .card {
             width: 100%;
             max-width: 1100px;
@@ -49,13 +46,11 @@
             border-radius: 20px;
             box-shadow: 0 12px 30px rgba(0, 0, 0, 0.18);
             display: flex;
-            gap: 0;
             overflow: hidden;
             min-height: 520px;
             align-items: stretch;
         }
 
-        /* left profile column */
         .profile-col {
             flex: 0 0 34%;
             background: linear-gradient(180deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.02));
@@ -85,8 +80,7 @@
         }
 
         .profile-role {
-            color: rgba(255, 255, 255, 0.92);
-            opacity: 0.9;
+            color: rgba(255, 255, 255, 0.9);
             font-size: 0.95rem;
             margin-bottom: 6px;
         }
@@ -96,7 +90,6 @@
             font-size: 0.92rem;
         }
 
-        /* right content column */
         .content-col {
             flex: 1;
             padding: 34px 40px;
@@ -143,7 +136,6 @@
             font-size: 0.98rem;
         }
 
-        /* password area */
         .password-area {
             margin-top: 10px;
             padding-top: 6px;
@@ -179,7 +171,6 @@
             box-shadow: 0 0 0 4px rgba(118, 75, 162, 0.08);
         }
 
-        /* save button aligned to right */
         .actions {
             display: flex;
             justify-content: flex-end;
@@ -203,7 +194,33 @@
             box-shadow: 0 14px 26px rgba(118, 75, 162, 0.22);
         }
 
-        /* small screens: stack columns, allow vertical scroll if needed */
+        /* fixed bottom buttons */
+        .fixed-buttons {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            gap: 12px;
+            z-index: 50;
+        }
+
+        .fixed-btn {
+            background: linear-gradient(135deg, var(--grad-start) 0%, var(--grad-end) 100%);
+            color: #fff;
+            border: none;
+            padding: 10px 16px;
+            border-radius: 10px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 8px 18px rgba(102, 126, 234, 0.18);
+            transition: transform .12s ease, box-shadow .12s ease;
+        }
+
+        .fixed-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 14px 26px rgba(118, 75, 162, 0.25);
+        }
+
         @media (max-width:920px) {
             body {
                 overflow: auto;
@@ -211,12 +228,10 @@
 
             .card {
                 flex-direction: column;
-                min-height: auto;
                 max-width: 900px;
             }
 
             .profile-col {
-                flex: 0 0 auto;
                 padding: 28px;
             }
 
@@ -235,47 +250,51 @@
             .actions {
                 justify-content: center;
             }
+
+            .fixed-buttons {
+                bottom: 15px;
+                right: 15px;
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="card" role="region" aria-label="Profile card">
+    <div class="card">
         <div class="profile-col">
-            <img class="profile-avatar"
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&w=400&q=80"
-                alt="Profile picture">
-           
+            <img class="profile-avatar" src="" alt="Profile picture">
+
         </div>
 
         <div class="content-col">
             <div>
                 <div class="section-title"><i class="fas fa-user"></i> Profile Details</div>
 
-                <div class="details-grid" aria-hidden="false">
+                <div class="details-grid">
                     <div class="detail">
                         <small>Full Name</small>
-                        <strong id="name">Abdul Salam</strong>
+                        <strong id="name"></strong>
                     </div>
                     <div class="detail">
                         <small>Email</small>
-                        <strong id="email">+92 300 1234567</strong>
+                        <strong id="email"></strong>
                     </div>
-                    
+
                     <div class="detail">
                         <small>User ID</small>
-                        <strong id="uid">Web & App Developer</strong>
+                        <strong id="uid"></strong>
                     </div>
                 </div>
             </div>
 
-            <div class="password-area" aria-label="Change password">
+            <div class="password-area">
                 <div class="section-title"><i class="fas fa-lock"></i> Change Password</div>
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="newPass">Current Password</label>
-                        <input id="currentPass" type="password" placeholder="Enter Current Password">
+                        <label for="currentPass">Current Password</label>
+                        <input id="currentPass" type="password" placeholder="Enter current password">
                     </div>
                     <div class="form-group">
                         <label for="newPass">New Password</label>
@@ -288,11 +307,16 @@
                 </div>
 
                 <div class="actions">
-                    <button class="btn-save" type="button"><i class="fas fa-key" style="margin-right:8px"></i>Save
-                        Password</button>
+                    <button class="btn-save"><i class="fas fa-key" style="margin-right:8px"></i>Save Password</button>
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- Fixed Buttons -->
+    <div class="fixed-buttons">
+        <button id="home" class="fixed-btn"><i class="fas fa-home"></i> Back to Home</button>
+        <button id="dashboard" class="fixed-btn"><i class="fas fa-chart-line"></i> Back to Dashboard</button>
     </div>
 
     <script type="module" src="./scripts/profile.js"></script>
