--- a/profile.html
+++ b/profile.html
@@ -257,6 +257,20 @@
                 flex-direction: column;
             }
         }
+
+        @media (max-width: 600px) {
+             .fixed-buttons {
+        flex-direction: column;
+        right: 10px;
+        bottom: 90px; 
+        gap: 8px;
+    }
+
+    .fixed-btn {
+        padding: 8px 12px;
+        font-size: 0.85rem;
+    }
+        }
     </style>
 </head>
 
