--- a/profile.html
+++ b/profile.html
@@ -6,272 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root {
-            --grad-start: #667eea;
-            --grad-end: #764ba2;
-            --card-bg: #ffffff;
-            --muted: #6b7280;
-            --panel: #f8f9fa;
-            --accent: #764ba2;
-        }
-
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, var(--grad-start) 0%, var(--grad-end) 100%);
-            -webkit-font-smoothing: antialiased;
-            overflow: hidden;
-            padding: 20px;
-        }
-
-        .card {
-            width: 100%;
-            max-width: 1100px;
-            background: var(--card-bg);
-            border-radius: 20px;
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.18);
-            display: flex;
-            overflow: hidden;
-            min-height: 520px;
-            align-items: stretch;
-        }
-
-        .profile-col {
-            flex: 0 0 34%;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.02));
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 40px 24px;
-            text-align: center;
-        }
-
-        .profile-avatar {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #fff;
-            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.12);
-            margin-bottom: 16px;
-        }
-
-        .profile-name {
-            font-size: 1.6rem;
-            font-weight: 700;
-            color: #fff;
-            margin-bottom: 6px;
-        }
-
-        .profile-role {
-            color: rgba(255, 255, 255, 0.9);
-            font-size: 0.95rem;
-            margin-bottom: 6px;
-        }
-
-        .profile-email {
-            color: rgba(255, 255, 255, 0.85);
-            font-size: 0.92rem;
-        }
-
-        .content-col {
-            flex: 1;
-            padding: 34px 40px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            gap: 10px;
-        }
-
-        .section-title {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: var(--accent);
-            font-weight: 700;
-            font-size: 1.1rem;
-            margin-bottom: 14px;
-        }
-
-        .details-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 18px;
-            margin-bottom: 10px;
-        }
-
-        .detail {
-            background: var(--panel);
-            border-radius: 10px;
-            padding: 14px 16px;
-            border-left: 4px solid var(--accent);
-        }
-
-        .detail small {
-            display: block;
-            color: var(--muted);
-            font-size: 0.82rem;
-            margin-bottom: 6px;
-        }
-
-        .detail strong {
-            display: block;
-            color: #111827;
-            font-size: 0.98rem;
-        }
-
-        .password-area {
-            margin-top: 10px;
-            padding-top: 6px;
-        }
-
-        .form-row {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 12px;
-            margin-bottom: 14px;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: 600;
-            color: #374151;
-            font-size: 0.9rem;
-            margin-bottom: 6px;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px 12px;
-            border-radius: 10px;
-            border: 1px solid #ddd;
-            font-size: 0.95rem;
-            transition: box-shadow .15s, border-color .15s;
-        }
-
-        .form-group input:focus {
-            outline: none;
-            border-color: var(--accent);
-            box-shadow: 0 0 0 4px rgba(118, 75, 162, 0.08);
-        }
-
-        .actions {
-            display: flex;
-            justify-content: flex-end;
-            margin-top: 8px;
-        }
-
-        .btn-save {
-            background: linear-gradient(135deg, var(--grad-start) 0%, var(--grad-end) 100%);
-            color: #fff;
-            border: 0;
-            padding: 10px 18px;
-            border-radius: 10px;
-            font-weight: 700;
-            cursor: pointer;
-            box-shadow: 0 8px 18px rgba(102, 126, 234, 0.18);
-            transition: transform .12s ease, box-shadow .12s ease;
-        }
-
-        .btn-save:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 14px 26px rgba(118, 75, 162, 0.22);
-        }
-
-        /* fixed bottom buttons */
-        .fixed-buttons {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            gap: 12px;
-            z-index: 50;
-        }
-
-        .fixed-btn {
-            background: linear-gradient(135deg, var(--grad-start) 0%, var(--grad-end) 100%);
-            color: #fff;
-            border: none;
-            padding: 10px 16px;
-            border-radius: 10px;
-            font-weight: 600;
-            cursor: pointer;
-            box-shadow: 0 8px 18px rgba(102, 126, 234, 0.18);
-            transition: transform .12s ease, box-shadow .12s ease;
-        }
-
-        .fixed-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 14px 26px rgba(118, 75, 162, 0.25);
-        }
-
-        @media (max-width:920px) {
-            body {
-                overflow: auto;
-            }
-
-            .card {
-                flex-direction: column;
-                max-width: 900px;
-            }
-
-            .profile-col {
-                padding: 28px;
-            }
-
-            .content-col {
-                padding: 24px;
-            }
-
-            .details-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .form-row {
-                grid-template-columns: 1fr;
-            }
-
-            .actions {
-                justify-content: center;
-            }
-
-            .fixed-buttons {
-                bottom: 15px;
-                right: 15px;
-                flex-direction: column;
-            }
-        }
-
-        @media (max-width: 600px) {
-             .fixed-buttons {
-        flex-direction: column;
-        right: 10px;
-        bottom: 90px; 
-        gap: 8px;
-    }
-
-    .fixed-btn {
-        padding: 8px 12px;
-        font-size: 0.85rem;
-    }
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/profile.css">
+    
 </head>
 
 <body>
