--- a/userposts.html
+++ b/userposts.html
@@ -239,8 +239,8 @@
     <!-- User Profile Header -->
     <div class="user-header">
         <img id="userProfile" src="" alt="User Profile" />
-        <h2 id="name">John Doe</h2>
-        <p id="email">@johndoe</p>
+        <h2 id="name"></h2>
+        <p id="email"></p>
     </div>
 
     <!-- Posts Grid -->
