--- a/register.html
+++ b/register.html
@@ -235,7 +235,7 @@
 
             <p style="text-align: center;" class="register-btn" id="upload_widget" class="cloudinary-button">Upload
                 Image</p>
-            <button type="submit" class="register-btn">Create Account</button>
+            <button type="submit" class="register-btn" id="register-btn">Create Account</button>
         </form>
 
         <div class="login-link">
